src/test/deca/context/invalid/cast.deca
class A {

}

class B {

}

class C extends B {

}

{
    C c = new C();
    A a = (A) (c);
}
//ERROR :15: